--- a/caculadora_de_notas_iesb_v2/android/app/build.gradle
+++ b/caculadora_de_notas_iesb_v2/android/app/build.gradle
@@ -33,7 +33,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "studio.barreto.caculadora_de_notas_iesb_v2"
+        applicationId "com.barretostudio.caculadora_nota_iesb"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
