--- a/caculadora_de_notas_iesb_v2/android/app/src/main/AndroidManifest.xml
+++ b/caculadora_de_notas_iesb_v2/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="caculadora_de_notas_iesb_v2"
+        android:label="Caculadora de Notas Iesb"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
