--- a/caculadora_de_notas_iesb_v2/pubspec.yaml
+++ b/caculadora_de_notas_iesb_v2/pubspec.yaml
@@ -10,8 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  font_awesome_flutter: ^8.5.0
-  bottom_navy_bar: ^5.3.2
+  flutter_launcher_icons: ^0.7.4
+
 
 
   cupertino_icons: ^0.1.3
@@ -31,3 +31,8 @@ flutter:
     - family: PatuaOne
       fonts:
         - asset: fonts/PatuaOne-Regular.ttf
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "icon/icone_calculadora.png"
